admission/ValidatingAdmissionPolicy/policies/run-as-user/containers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: run-as-user-containers
  annotations:
    security.kubeapt.io/displayName: 'Run As User'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for run-as-user/containers.
    security.kubeapt.io/resource: Containers
    security.kubeapt.io/severity: "5"
    security.kubeapt.io/remediation: Adjust workloads to satisfy the run-as-user/containers policy.
    policies.kolteq.com/validatingAdmissionPolicy: b0ffea98-d0e2-50dd-899f-292c948c91ee
  labels:
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    run-as-user-containers.security.kolteq.com/audit: 'false-true'
    run-as-user-containers.security.kolteq.com/enforce: 'false-true'
    run-as-user-containers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        object.spec.containers.all(c,
          !has(c.securityContext) ||
          !has(c.securityContext.runAsUser) ||
          c.securityContext.runAsUser > 0
        )
      message: >
        spec.containers[*].securityContext.runAsUser must be undefined or a non-zero value (> 0).
